tests/invalids/missingBegin.gt
proc main ()
    int m;

    read m;
end
